# valkit

./: .gitignore  404.html  README.md  bump_14.py  index.html  mkdocs.yml  objects.inv  patch_cli.py  patch_cli_fix.py  pyproject.toml  sitemap.xml  test_mcp_server.py
changelog/: index.html
cli/: index.html
docs/: changelog.md  cli.md  index.md
docs/overrides/: home.html
engines/health/: index.html
mcp/: index.html
overrides/: home.html
quickstart/: index.html
sdk/: index.html
search/: search_index.json
site/changelog/: index.html
site/overrides/: home.html
site/search/: search_index.json
stylesheets/: extra.css
telmus/cli/: app.py
telmus/core/: loaders.py  scanner.py
telmus/core/engines/: growth.py  health.py  valuation.py
telmus/exporters/: excel.py  html_dashboard.py
tests/: test_excel.py  test_health.py  test_loaders.py
