[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "telmus"
version = "0.1.14"
description = "Financial statement analysis for AI IDEs and coding agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{name = "Shubh Wade", email = "shubhwade@gmail.com"}]
dependencies = [
    "openpyxl>=3.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pandas>=2.0.0",
    "yfinance>=0.2.0",
    "mcp>=0.1.0",
]
keywords = ["finance", "mcp", "financial-analysis", "piotroski", "altman", "beneish", "yfinance", "ai-agent", "mcp-server", "claude"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

[project.urls]
Homepage = "https://shubhwade.github.io/telmus"
Documentation = "https://shubhwade.github.io/telmus"
Repository = "https://github.com/shubhwade/telmus"
Changelog = "https://shubhwade.github.io/telmus/changelog/"

[project.scripts]
telmus = "telmus.cli.app:app"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff",
    "bandit",
    "twine",
    "mkdocs-material",
    "mkdocstrings[python]",
    "streamlit",
]

[tool.hatch.build.targets.wheel]
packages = ["telmus"]
